--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <img src="./img/ia.png" 
-                alt="Uma pessoa olhando para a esquerda" 
+                alt="Uma pessoa olhando para esquerda" 
                 class="container__imagem-pessoa" />
         </div>
     </div>
